cmake_minimum_required(VERSION 2.8)
add_subdirectory(advancedEventsExample)
add_subdirectory(advancedGraphicsExample)
add_subdirectory(audioInputExample)
add_subdirectory(audioOutputExample)
add_subdirectory(emptyExample)
add_subdirectory(eventsExample)
add_subdirectory(firmataExample)
add_subdirectory(fontsExample)
add_subdirectory(fontShapesExample)
add_subdirectory(graphicsExample)
add_subdirectory(imageLoaderExample)
add_subdirectory(imageSaverExample)
add_subdirectory(movieGrabberExample)
add_subdirectory(moviePlayerExample)
add_subdirectory(polygonExample)
add_subdirectory(serialExample)
add_subdirectory(soundPlayerExample)
add_subdirectory(soundPlayerFFTExample)
add_subdirectory(textureExample)
add_subdirectory(textureScreengrabExample)
add_subdirectory(windowExample)
