
add_subdirectory(3DModelLoaderExample)
add_subdirectory(3DPrimitivesExample)
add_subdirectory(advanced3dExample)
add_subdirectory(assimpExample)
add_subdirectory(cameraLensOffsetExample)
add_subdirectory(cameraParentingExample)
add_subdirectory(cameraRibbonExample)
add_subdirectory(easyCamExample)
add_subdirectory(meshFromCameraExample)
add_subdirectory(modelNoiseExample)
add_subdirectory(normalsExample)
add_subdirectory(ofBoxExample)
add_subdirectory(ofNodeExample)
add_subdirectory(orientationExample)
add_subdirectory(pathsToMeshesExample)
add_subdirectory(pointCloudExample)
add_subdirectory(pointPickerExample)
add_subdirectory(quaternionArcballExample)
add_subdirectory(quaternionLatLongExample)