add_subdirectory(androidAccelerometerExample)
add_subdirectory(androidAdvanced3DExample)
add_subdirectory(androidAssimpExample)
add_subdirectory(androidAudioExample)
add_subdirectory(androidCameraExample)
add_subdirectory(androidEmptyExample)
add_subdirectory(androidFontExample)
add_subdirectory(androidGuiExample)
add_subdirectory(androidImageExample)
add_subdirectory(androidJavaOnlyActivityExample)
add_subdirectory(androidMultiOFActivitiesExample)
add_subdirectory(androidOpenCVExample)
add_subdirectory(androidOpenCVFaceExample)
add_subdirectory(androidPolygonExample)
add_subdirectory(androidShaderExample)
add_subdirectory(androidSoundPlayerExample)
add_subdirectory(androidSwipeExample)
add_subdirectory(androidTouchExample)
add_subdirectory(androidVBOExample)
add_subdirectory(androidVibratorExample)
add_subdirectory(androidVideoExample)