
add_subdirectory(blendingExample)
add_subdirectory(colorExample)
add_subdirectory(colorsExtendedExample)
add_subdirectory(floatingPointImageExample)
add_subdirectory(fontsExample)
add_subdirectory(fontShapesExample)
add_subdirectory(graphicsExample)
add_subdirectory(imageSubsectionExample)
add_subdirectory(lutFilterExample)
add_subdirectory(polygonExample)
add_subdirectory(polylineBlobsExample)
add_subdirectory(rectangleAlignmentAndScalingExample)
add_subdirectory(simpleColorKeyExample)
add_subdirectory(vectorGraphicsExample)
