
add_subdirectory(clipboardExample)
add_subdirectory(dirListExample)
add_subdirectory(dragDropExample)
add_subdirectory(fileBufferLoadingCSVExample)
add_subdirectory(fileOpenSaveDialogExample)
add_subdirectory(imageCompressionExample)
add_subdirectory(imageLoaderExample)
add_subdirectory(imageLoaderWebExample)
add_subdirectory(imageSaverExample)
add_subdirectory(imageSequenceExample)
add_subdirectory(jsonExample)
add_subdirectory(loadTextFileExample)
add_subdirectory(pdfExample)
add_subdirectory(pugiXmlExample)
add_subdirectory(svgExample)
add_subdirectory(systemSpeakExample)
add_subdirectory(xmlExample)
add_subdirectory(xmlSettingsExample)
