
add_subdirectory(advancedEventsExample)
add_subdirectory(advancedGraphicsExample)
add_subdirectory(assimpExample)
add_subdirectory(audioInputExample)
add_subdirectory(audioOutputExample)
add_subdirectory(CoreHapticsExample)
add_subdirectory(CoreLocationExample)
add_subdirectory(dirListExample)
add_subdirectory(emptyExample)
add_subdirectory(eventsExample)
add_subdirectory(fontsExample)
add_subdirectory(fontShapesExample)
add_subdirectory(GLKit)
add_subdirectory(GLKitNativeARCExample)
add_subdirectory(graphicsExample)
add_subdirectory(imageLoaderExample)
add_subdirectory(ImagePickerExample)
add_subdirectory(iosCoreMotionCameraExample)
add_subdirectory(iosCoreMotionExample)
add_subdirectory(iosCoreMotionLegacyExample)
add_subdirectory(iosCustomSizeExample)
add_subdirectory(iosES2ShaderExample)
add_subdirectory(iosExternalDisplayExample)
add_subdirectory(iosNativeARCExample)
add_subdirectory(iosNativeExample)
add_subdirectory(iosOrientationExample)
add_subdirectory(iosStoryboardExample)
add_subdirectory(iPhoneGuiExample)
add_subdirectory(KeyboardExample)
add_subdirectory(MapKitExample)
add_subdirectory(moviePlayerExample)
add_subdirectory(ofxGuiExample)
add_subdirectory(opencvExample)
add_subdirectory(opencvFaceExample)
add_subdirectory(oscReceiverExample)
add_subdirectory(oscSenderExample)
add_subdirectory(polygonExample)
add_subdirectory(PrimitivesExample)
add_subdirectory(soundPlayerExample)
add_subdirectory(textureExample)
add_subdirectory(vboExample)
add_subdirectory(videoGrabberExample)
add_subdirectory(xmlSettingsExample)
